# fluidoml

./: .ocamlformat  dune-project  fluido.opam  fluidoml.opam
.github/workflows/: ci.yml
lib/: dune
src/cli/: cli.ml  cli.mli  config.ml  config.mli  dune  input_space.ml  input_space.mli  validate.ml  validate.mli
test/: dune  test_cli.ml
